<resources>
    <string name="app_name">АРМ Водителя</string>
    <string name="error_base">Произошла ошибка</string>
    <string name="error_connection_failed">Нет подключения к интернету</string>
    <string name="error_connection_timeout">Истекло время подключения к серверу. Пожалуйста, попробуйте еще раз.</string>
    <string name="error_permission_denied">Необходимо дать приложению нужные разрешения</string>
    <string name="error_photo_required">Обязательны фото до/после</string>
    <string name="error_photo_required_before">Обязательно фото ДО вывоза</string>
    <string name="error_photo_required_after">Обязательно фото ПОСЛЕ вывоза</string>
    <string name="error_duplicate_data">Дублирования данных. При повторном отоброжени,попробуйти перезайти заново в приложение</string>
    <string name="error_photo_required_trouble">Обязательно фото причины невывоза</string>
    <string name="error_authorization">Ошибка авторизации</string>
    <string name="error_route_not_started">Маршрут не был выбран</string>
    <string name="login_personnel_number_hint">Учетная запись</string>
    <string name="login_button_text">Войти</string>
    <string name="login_settings_menu">Настройки</string>
    <string name="login_settings_menu_description">Настройки входа в приложение</string>
    <string name="login_about_menu">О приложении</string>
    <string name="login_about_menu_description">Техническая информация о приложении. Такая как версия и разработчик</string>
    <string name="login_company_name_text">Самая лучшая компания на планете</string>
    <string name="login_personnel_number_empty_error">Поле обязательно</string>
    <string name="login_error_snackbar">Ошибка!</string>
    <string name="login_error_snackbar_action">Подробнее</string>
    <string name="login_error_dialog_title">Об ошибке</string>
    <string name="login_error_dialog_negative">Закрыть</string>
    <string name="login_error_dialog_positive">Отправить отчет</string>
    <string name="login_activity_update_dialog_title">Доступно обновление!</string>
    <string name="login_activity_update_dialog_message">Обновление необходимо. Если вы откажетесь от обновления сейчас, приложение закроется</string>
    <string name="login_activity_update_dialog_positive">Перейти к обновлению</string>
    <string name="login_activity_update_dialog_negative">Не сейчас</string>
    <string name="login_hello">Здравствуйте, %s, удачной смены!</string>
    <string name="login_hello_simply">Здравствуйте! Удачной смены!</string>
    <string name="login_error_message">Введите другой табельный номер</string>
    <string name="about_version_label">Версия приложения</string>
    <string name="about_update_date_label">Дата обновления</string>
    <string name="about_last_version_label">Новейшая версия</string>
    <string name="about_get_last_version_button">Обновиться</string>
    <string name="about_toolbar_header">О приложении</string>
    <string name="about_activity_update_dialog_title">Доступно обновление</string>
    <string name="about_activity_update_dialog_message">Доступна новая версия приложения. Необходимо обновиться</string>
    <string name="about_activity_update_dialog_positive">Обновить</string>
    <string name="about_activity_update_dialog_negative">Закрыть</string>
    <string name="about_activity_switch_dialog_title">Доступно  "%s" версия приложения</string>
    <string name="about_activity_switch_dialog_message">Доступна  "%s" версия приложения. Можете переключиться</string>
    <string name="about_activity_switch_dialog_positive">Установить</string>
    <string name="about_activity_switch_dialog_negative">Закрыть</string>
    <string name="route_button_start_text">Начать</string>
    <string name="route_button_continue_text">Продолжить</string>
    <string name="stands_list_header_fact_time_text">Факт</string>
    <string name="stands_list_header_on_board">На борту</string>
    <string name="stands_list_header_plan_time_text">План</string>
    <string name="stands_list_header_address_text">Адрес</string>
    <string name="stands_list_dumping_button_text">Разгрузка</string>
    <string name="stands_list_current_task_button_text">К ЗАДАНИЮ</string>
    <string name="stands_list_nearest_stands_button_text">Рядом</string>
    <string name="stands_list_no_completed_tasks_error">Нет выполненных заданий. Разгрузка невозможна</string>
    <string name="stands_list_route_error">Ошибка маршрута</string>
    <string name="stands_list_dumping_dialog_title">Разгрузка</string>
    <string name="stands_list_dumping_dialog_message">Вы уверены, что хотите отправиться на разгрузку?</string>
    <string name="stands_list_dumping_dialog_positive">Да</string>
    <string name="stands_list_dumping_dialog_negative">Нет</string>
    <string name="stands_list_dialog_polygon_selection_title">Выберите полигон для разгрузки</string>
    <string name="stands_list_search_view_text_hint">Введите адрес</string>
    <string name="stands_list_empty_list_warning"> </string>
    <string name="task_fragment_set_next_button">Выбрать следующей</string>
    <string name="task_fragment_to_route_button">К Маршруту</string>
    <string name="task_fragment_navigator_button">Навигатор</string>
    <string name="task_fragment_qr_scanner_button">Сканер</string>
    <string name="task_fragment_came_button">Прибыл</string>
    <string name="task_fragment_contacts_label_text">Контакты</string>
    <string name="task_fragment_customer_label_text">Контрагент:</string>
    <string name="task_fragment_address_label_text">МПС ЭкоВтор+</string>
    <string name="task_fragment_load_level_label_text">Загруженность</string>
    <string name="task_fragment_note_label_text">Примечание</string>
    <string name="task_fragment_priority_label_text">Приоритет</string>
    <string name="task_fragment_transport_state_label_text">Состояние ТС</string>
    <string name="task_fragment_set_next_two_lines_button">Выбрать &#10;следующей</string>
    <string name="task_fragment_problem_button">Проблема</string>
    <string name="task_fragment_geo_permission_denied_message">Невозможно завершить маршрут, если нет доступа к геолокации</string>
    <string name="dumping_polygon">Полигон</string>
    <string name="task_fragment_dialog_positive_button">Погрузка</string>
    <string name="task_fragment_dialog_negative_button">Невывоз</string>
    <string name="task_fragment_dialog_title">Маршрутное задание</string>
    <string name="task_fragment_final_task_info">Сдать ключи и планшет</string>
    <string name="task_fragment_finish_dialog_title">Вы хотите завершить маршрут?</string>
    <string name="task_fragment_finish_dialog_positive_button">Завершить</string>
    <string name="task_fragment_finish_dialog_negative_button">Отмена</string>
    <string name="task_fragment_loading_dialog_title">Отправка запроса на полигон, подождите…</string>
    <string name="task_fragment_polygon_request_dialog_title">Не удалось получить ответ сервера</string>
    <string name="task_fragment_polygon_request_dialog_message">Попробовать снова?</string>
    <string name="task_fragment_polygon_internet_message"></string>
    <string name="task_fragment_polygon_request_dialog_positive">Повтор</string>
    <string name="garbage_load_fragment_photo_before_button">До</string>
    <string name="garbage_load_fragment_photo_after_button">После</string>
    <string name="garbage_load_fragment_photo_problem_button">Проблема</string>
    <string name="garbage_load_fragment_add_button">Добавить</string>
    <string name="garbage_load_fragment_done_button">Готово</string>
    <string name="garbage_load_fragment_fill_container_info_warning">Заполните информацию о степени наполнения контейнера</string>
    <string name="garbage_load_fragment_trouble_photos_needed_warning">Нужны фотографии проблем вывоза контейнеров</string>
    <string name="garbage_load_dialog_trouble_reason_label">Причина невывоза</string>
    <string name="garbage_load_result_success">Результат вывоза отправлен на сервер!</string>
    <string name="garbage_load_flight">Рейс 1</string>
    <string name="garbage_load_hint_tko">ТКО</string>
    <string name="garbage_load_number">6</string>
    <string name="garbage_load_rso_grid_ro">РСО сетка РО</string>
    <string name="garbage_load_pick_replacement">Забрать с заменой</string>
    <string name="item_garbage_load_dropdown_hint">Степень наполнения контейнера</string>
    <string name="task_trouble_fragment_task_label">Задание</string>
    <string name="task_trouble_fragment_reason_label">Причина</string>
    <string name="task_trouble_fragment_reason_dropdown_hint">Выбрать</string>
    <string name="task_trouble_fragment_photo_label">Фото</string>
    <string name="task_trouble_fragment_info_label">Информация</string>
    <string name="task_trouble_fragment_confirm_button">Отправить</string>
    <string name="task_trouble_fragment_no_reason_warning">Не выбрана причина невывоза</string>
    <string name="task_trouble_fragment_no_photo_warning">Нет фото</string>
    <string name="task_trouble_photo_required_message">Необходимо сделать фотографию причины невывоза</string>
    <string name="new_temporary_task_fragment_title_label">Создание временной площадки</string>
    <string name="new_temporary_task_fragment_client_dropdown_hint">Клиент</string>
    <string name="new_temporary_task_fragment_address_field_hint">Адрес</string>
    <string name="new_temporary_task_fragment_district_dropdown_hint">Район</string>
    <string name="new_temporary_task_fragment_area_dropdown_hint">Участок</string>
    <string name="new_temporary_task_fragment_confirm_button_text">Принять</string>
    <string name="new_task_fragment_action_dropdown_hint">Действие</string>
    <string name="new_task_access_checkpoint">Сложный подъезд к КП</string>
    <string name="new_address">ул. Лесная, 63А</string>
    <string name="new_task_fragment_container_dropdown_hint">Контейнер</string>
    <string name="new_task_fragment_contract_dropdown_hint">Договор</string>
    <string name="new_task_fragment_containers_number_hint">Число контейнеров</string>
    <string name="new_task_fragment_confirm_button">Создать заявку</string>
    <string name="photo_activity_retry_button">Заново</string>
    <string name="photo_activity_cancel_button">Отмена</string>
    <string name="photo_activity_confirm_button">Готово</string>
    <string name="route_home_fragment_route_info_label">Данные о маршруте:</string>
    <string name="route_home_loading">Загрузка...</string>
    <string name="route_home_fragment_driver_info_label">Водитель:</string>
    <string name="route_home_fragment_loader_1_dropdown_hint">Грузчик 1</string>
    <string name="route_home_fragment_loader_2_dropdown_hint">Грузчик 2</string>
    <string name="route_home_fragment_finish_button">Завершить</string>
    <string name="route_home_rollback_finish_button">ВЕРНУТЬСЯ</string>
    <string name="route_home_fragment_to_route_button">К Маршруту</string>
    <string name="route_home_fragment_dialog_close_title">Дождитесь окончания загрузки</string>
    <string name="route_home_fragment_dialog_close_positive">Выйти</string>
    <string name="text_no">ОТМЕНА</string>
    <string name="text_yes">ДА</string>
    <string name="txt_cancel_unloading">Вы уверены, что хотите отменить разгрузку на полигоне?</string>
    <string name="are_you_sure_you_want_to_get_out">Вы уверены, что хотите выйти?</string>
    <string name="go_for_unloading">Вы уверены, что хотите отправиться на разгрузку?</string>
    <string name="continue_without_movers">Продолжить без грузчиков?</string>
    <string name="select_problem">УКАЖИТЕ ПРОБЛЕМУ</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="ok">ОК</string>
    <string name="completed_successfully_text">Задание выполнено успешно</string>
    <string name="message_address">Семилуки,\n улица Автомобилистов 4 (Казань)</string>
    <string name="message_complete_text_title">Вы хотите завершить работы \n на площадке?</string>
</resources>