<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="20sp"
        android:textColor="@color/color_text"
        android:text="@string/are_you_sure_you_want_to_get_out"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/returnBtn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/gmm_white"
            android:text="@string/text_no"
            app:cornerRadius="0dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/color_text"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sureBtn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:text="@string/text_yes"
            app:cornerRadius="0dp"
            android:textColor="@color/gmm_white"
            android:backgroundTint="@color/color_text"/>
    </LinearLayout>
</LinearLayout>