<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textPolygon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="20sp"
        android:textColor="@color/color_text"
        android:text="@string/go_for_unloading"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:gravity="right"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmationExitBtnNo"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/black_to_red_color"
            android:text="@string/text_no"
            android:textSize="13sp"
            app:cornerRadius="0dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/gmm_white"
            tools:ignore="SmallSp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmationExitBtnYes"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="3dp"
            android:text="@string/text_yes"
            android:textSize="13sp"
            app:cornerRadius="0dp"
            android:textColor="@color/gmm_white"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/green_text"
            tools:ignore="SmallSp" />
    </LinearLayout>
</LinearLayout>