<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/txt_cancel_unloading"
        android:textColor="@color/color_text"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="right"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelNoBtn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/black_to_red_color"
            android:textSize="10sp"
            android:text="@string/text_no"
            app:cornerRadius="0dp"
            android:layout_marginStart="6dp"
            android:textColor="@color/gmm_white"
            tools:ignore="SmallSp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelYesBtn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/green_text"
            app:cornerRadius="0dp"
            android:textSize="10sp"
            android:text="@string/text_yes"
            android:layout_marginStart="6dp"
            android:textColor="@color/gmm_white"/>
    </LinearLayout>
</LinearLayout>